fix: team members section - gap

--- a/style/style.scss
+++ b/style/style.scss
@@ -401,7 +401,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10rem;
+    gap: 8rem;
     padding: 6rem;
     padding-bottom: 3rem;
   }
